--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,18 @@ body {
     padding: 0;
 }
 
+.widget-title h2 {
+    color: #000;
+    font-size: 21px;
+    font-weight: bold;
+}
+
+.widget-title .border-title {
+    width: 50px;
+    height: 2px;
+    background-color: #36a9e1;
+}
+
 /* 
 - HEADER
 */
@@ -70,7 +82,7 @@ header .container .menu ul li a.active, header .container .menu ul li a:hover {
     height: 670px;
 }
 
-#banner .column {
+.column {
     flex-direction: column;
 }
 
@@ -245,4 +257,108 @@ header .container .menu ul li a.active, header .container .menu ul li a:hover {
     line-height: 20px;
     font-size: 14px;
     margin-bottom: 30px;
+}
+
+#content .widget-container-departments {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 90%;
+}
+
+#content .widget-container-departments .departments1,
+#content .widget-container-departments .departments2,
+#content .widget-container-departments .departments3,
+#content .widget-container-departments .departments4,
+#content .widget-container-departments .departments5,
+#content .widget-container-departments .departments6 {
+    background-color: #39aae1;
+    width: 60px;
+    height: 60px;
+    margin: 10px;
+}
+
+#content .widget-container-appointment p {
+    font-size: 13px;
+    color: #5c5c5c;
+}
+
+#content .widget-container-appointment ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+#content .widget-container-appointment ul li {
+    padding: 10px 5px;
+    margin-top: 10px;
+    border-bottom: 1px solid #aaa;
+    max-width: 80%;
+}
+
+#content .widget-container-appointment ul li:first-child {
+    border-top: 1px solid #aaa;
+}
+
+#content .widget-container-appointment ul li a {
+    text-decoration: none;
+    color: #333;
+    font-size: 11px;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    color: #fff;
+    background-color: #1e1e1e;
+}
+
+footer .footer-menu {
+    display: flex;
+}
+
+footer .footer-menu .fm-1,
+footer .footer-menu .fm-2,
+footer .footer-menu .fm-3 {
+    flex: 1;
+    color: #fff;
+    padding: 20px;
+}
+
+footer .footer-menu .fm-1 {
+    background-color: #39aae1;
+}
+
+footer .footer-menu .fm-2 {
+    background-color: #0079c7;
+}
+
+footer .footer-menu .fm-3 {
+    background-color: #2b4c99;
+}
+
+footer .footer-content {
+    display: flex;
+}
+
+footer .footer-content .footer-item {
+    flex: 1;
+}
+
+footer .footer-content .footer-item .widget-title h2 {
+    color: #fff;
+}
+
+footer .footer-content .footer-item .widget-content {
+    margin-top: 30px;
+    font-size: 13px;
+    color: #5c5c5c;
+}
+
+footer .footer-copy {
+    border-top: 1px solid #2c2c2c;
+    height: 40px;
+    line-height: 40px;
+    color: #5c5c5c;
+    font-size: 12px;
+    margin-top: 30px;
 }
